--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,12 +45,24 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    transition: opacity 2000ms linear ,transform 500ms ease-in-out;
+    animation: pulse 2000ms ease-in-out infinite both;
+}
+
+@keyframes pulse {
+    0%{
+        opacity: 0;
+        transform: none;
+    }
+
+    75%{
+        opacity: 1;
+        transform: scale(1.5);
+    }
 }
 
 .large-button:hover::before {
-    opacity: 1;
-    transform: scale(1.5);
+    animation-play-state: paused;
+    animation-duration: 1000ms;
 }
 
 .logo{
@@ -139,7 +151,7 @@ header {
 .home {
     background-size: cover;
     background-position: center center;
-    background-image: url(../assets/home/background-home-mobile.jpg);
+    background-image: url(../img/home/background-home-mobile.jpg);
 } 
 
 /*destiantion layout*/
@@ -227,21 +239,21 @@ header {
         top: 2rem;
         right: 1rem;
         background: transparent;
-        background-image: url(../assets/shared/icon-hamburger.svg);
+        background-image: url(../img/shared/icon-hamburger.svg);
         background-repeat: no-repeat;
         width: 1.5rem;
         aspect-ratio: 1;
         border: 0;
     }
     .mobile-nav-toggle[aria-expanded="true"]{
-        background-image: url(../assets/shared/icon-close.svg);
+        background-image: url(../img/shared/icon-close.svg);
     }
  
 }
 
 @media (min-width: 35em){
     .home{
-        background-image: url(../assets/home/background-home-tablet.jpg);
+        background-image: url(../img/home/background-home-tablet.jpg);
     }
 
     .primary-navigation{
@@ -271,7 +283,7 @@ header {
 
 @media (min-width: 45em){
     .home{
-        background-image: url(../assets/home/background-home-desktop.jpg);
+        background-image: url(../img/home/background-home-desktop.jpg);
     }
 
     .home > .grid-container {
