--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    animation: pulse 2000ms ease-in-out infinite both;
+    animation: pulse 1200ms cubic-bezier(0.33, 0.36, 0.93, 0.41) infinite both;
 }
 
 @keyframes pulse {
